fix: add z-index

--- a/src/layouts/Header/header.module.css
+++ b/src/layouts/Header/header.module.css
@@ -7,6 +7,7 @@
   flex: none;
   background-color: var(--color-standard);
   border-bottom: 1px solid var(--color-standard-border);
+  z-index: var(--z-index-header);
 }
 
 .inner {
